Melhora nos números

--- a/styles/components/action.module.sass
+++ b/styles/components/action.module.sass
@@ -8,5 +8,9 @@
   align-items: center
   margin: 15px
   cursor: pointer
+  &:active
+    background: #b44040
   p
     margin: 0
+    color: white
+    font-weight: bold
