--- a/styles/components/operator.module.sass
+++ b/styles/components/operator.module.sass
@@ -8,5 +8,8 @@
   align-items: center
   margin: 15px
   cursor: pointer
+  &:active
+    background: #d2ac5f
   p
     margin: 0
+    font-size: 16px
